ssu_score/STD_DIR/20190004/12.error
STD_DIR/20190004/12.c:70:1: error: expected '}'
^
STD_DIR/20190004/12.c:57:1: note: to match this '{'
{
^
1 error generated.
sh: 1: command not found
sh: line 1: /12.error: No such file or directory
